- Adição do TabsPagerAdapter para poder fazer o swipe entre a tela de investimento e de contato - Adição da classe UIGeneratorContato que cria a view necessária dimicamente com os parâmetros da classe Cell

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile "com.android.support:appcompat-v7:$rootProject.supportLibraryVersion"
+    compile "com.android.support:design:$rootProject.supportLibraryVersion"
 
     //Jackson
     compile "com.fasterxml.jackson.core:jackson-core:$rootProject.jacksonVersion"
