- Adição da biblioteca Calligraphy para poder aplicar um padrão de fonte para todo o app - Adição das classes para salvar o SharedPreferences com o objetivo de mudar da tela de Contato para Sucesso e vice versa - Criação do BaseFragment para poder ser extendido por Fragments que possuem comportamentos em comum - Adição de outras validações - Adição do FragmentSucesso

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     compile "com.android.support:appcompat-v7:$rootProject.supportLibraryVersion"
     compile "com.android.support:design:$rootProject.supportLibraryVersion"
 
+    compile "uk.co.chrisjenx:calligraphy:$rootProject.calligraphyVersion"
+
     //Jackson
     compile "com.fasterxml.jackson.core:jackson-core:$rootProject.jacksonVersion"
     compile "com.fasterxml.jackson.core:jackson-annotations:$rootProject.jacksonVersion"
