- Adição da biblioteca MPAndroidChart para construir o gráfico - Adição do gráfico e de outros elementos na tela de investimento - Adição da classe UIGeneratorInvestimento que provê funções para gerar a UI dinamicamente

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,11 @@ dependencies {
     compile "com.android.support:appcompat-v7:$rootProject.supportLibraryVersion"
     compile "com.android.support:design:$rootProject.supportLibraryVersion"
 
+    //Calligraphy
     compile "uk.co.chrisjenx:calligraphy:$rootProject.calligraphyVersion"
+
+    //Chart
+    compile "com.github.PhilJay:MPAndroidChart:$rootProject.chartVersion"
 
     //Jackson
     compile "com.fasterxml.jackson.core:jackson-core:$rootProject.jacksonVersion"
